@@ -1,6 +1,9 @@
     *** Map Display ***
 	- Tapping compass direction on top of map screen rotates through rotation modes
-	 (Movement Direction, Compass, Autoswitch, Manual Rotation)  
+	 (Movement Direction, Compass, Autoswitch, Manual Rotation)
+	- On pinch rotate set manual rotation mode to stop compass readings from rotating the map
+	  (can be restored to previous rotation mode by tapping "|" or pressing 5,
+	  also will be restored to previous rotation mode after auto gps recenter time from Display Options)  
 	*** Android support ***
 	- respect Android display metrics for drawing ways accordingly wider on high density displays
     *** Usability ***
